[gd_scene load_steps=14 format=2]

[ext_resource path="res://node/map/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://node/UI/UI.tscn" type="PackedScene" id=3]
[ext_resource path="res://node/mouse_root/mouse_root_len.tscn" type="PackedScene" id=4]
[ext_resource path="res://node/mouse_root/mouse_root.tscn" type="PackedScene" id=5]
[ext_resource path="res://node/main/main.gd" type="Script" id=6]
[ext_resource path="res://node/level_base/not_prevent.gd" type="Script" id=7]
[ext_resource path="res://node/mouse_root/mouse_root_or.tscn" type="PackedScene" id=8]
[ext_resource path="res://node/mouse_root/mouse_root_short.tscn" type="PackedScene" id=9]
[ext_resource path="res://node/UI/agin.tscn" type="PackedScene" id=10]
[ext_resource path="res://resoure/UI/return/return.tres" type="Texture" id=11]
[ext_resource path="res://node/next/next.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.375, 320 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 46.5, 320 )

[node name="level_base" type="Node2D"]
script = ExtResource( 6 )
tool_num = 4
agin = "res://level/1/level1.tscn"

[node name="map" parent="." instance=ExtResource( 1 )]

[node name="UI" parent="." instance=ExtResource( 3 )]
position = Vector2( 123, 0 )

[node name="mouse_root" parent="." instance=ExtResource( 5 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.247059 )

[node name="mouse_root_len" parent="." instance=ExtResource( 4 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.239216 )

[node name="not_prevent" type="Area2D" parent="."]
monitorable = false
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="not_prevent"]
position = Vector2( 61.625, 320 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="not_prevent"]
position = Vector2( 1105, 320 )
shape = SubResource( 3 )

[node name="mouse_root_or" parent="." instance=ExtResource( 8 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.243137 )

[node name="mouse_root_short" parent="." instance=ExtResource( 9 )]
visible = false
self_modulate = Color( 1, 1, 1, 0.235294 )

[node name="agin" parent="." instance=ExtResource( 10 )]
position = Vector2( 1116, 32 )
agin = "res://level/1/level1.tscn"

[node name="next" parent="." instance=ExtResource( 12 )]
visible = false
position = Vector2( 64, 32 )

[node name="agin2" parent="." instance=ExtResource( 10 )]
position = Vector2( 1114, 96 )
texture = ExtResource( 11 )
agin = "res://node/select_menu/select_menu.tscn"

[connection signal="mouse_entered" from="not_prevent" to="." method="_on_not_prevent_mouse_entered"]
[connection signal="mouse_exited" from="not_prevent" to="." method="_on_not_prevent_mouse_exited"]
